@@ -1,5 +1,6 @@
 [B]0.5.6[/B]
 Info-list for videos
+Show labels view option for thumbnails in music view
 
 [B]0.5.5[/B]
 Clean-up of music view types
